# AIM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
dev-tools/: createClass.py  createTest.py
docs/: Doxyfile
docs/manual/: index.md
docs/manual/developerGuide/: codingGuidelines.md
docs/manual/userGuide/: parameterHandling.md
src/: CMakeLists.txt  groupDefinitions.hpp
src/computationalMesh/: CMakeLists.txt
src/computationalMesh/computationalMesh/: CMakeLists.txt  computationalMesh.cpp  computationalMesh.hpp  computationalMesh.tpp
src/computationalMesh/coordinateArray/: CMakeLists.txt  coordinateArray.hpp
src/computationalMesh/meshReading/: CMakeLists.txt  meshReading.cpp  meshReading.hpp  meshReading.tpp
src/parameterFileHandling/: CMakeLists.txt
src/parameterFileHandling/dataContainer/: CMakeLists.txt  dataContainer.cpp  dataContainer.hpp  dataContainer.tpp
src/parameterFileHandling/parameterManager/: CMakeLists.txt  parameterManager.cpp  parameterManager.hpp  parameterManager.tpp
src/parameterFileReading/: CMakeLists.txt  parameterFileReading.cpp  parameterFileReading.hpp  parameterFileReading.tpp
src/template/: CMakeLists.txt  template.hpp  template.tpp  templateGroup.hpp
src/types/: enums.hpp  types.hpp
src/utilities/: CMakeLists.txt
src/utilities/fileChecker/: CMakeLists.txt  fileChecker.cpp  fileChecker.hpp  fileChecker.tpp
tests/: CMakeLists.txt
tests/testingResources/inputFiles/: aim.json
tests/testingResources/mesh/: test2D.cgns
tests/unit/: CMakeLists.txt  CmakeLists.txt
tests/unit/computationalMesh/: CMakeLists.txt
tests/unit/computationalMesh/computationalMesh/: CMakeLists.txt  computationalMeshTest.cpp
tests/unit/computationalMesh/coordinateArray/: CMakeLists.txt
tests/unit/computationalMesh/meshReading/: CMakeLists.txt  meshReaderTest.cpp  meshReadingTest.cpp
tests/unit/parallel/: CMakeLists.txt
tests/unit/parameterFileHandling/dataContainer/: CMakeLists.txt  dataContainerTest.cpp
tests/unit/parameterFileHandling/parameterManager/: CMakeLists.txt  parameterManagerTest.cpp
tests/unit/parameterFileReading/: CMakeLists.txt  parameterFileReadingTest.cpp
